--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,23 @@
 body{
-  background-color: #9266ff;
+  background-color: #d2c7ee;
 }
 .App{
-  background-color: #3f3160;
+  background-color: #300242b0;
   min-height:500px;
-  width: 400px;
+  width: 1000px;
   margin: 40px auto;
 }
 
+.App button {
+  font-size: large;
+  font-weight: 700;
+}
+
 #to-do-form input{
-  background-color: rgba(27, 112, 137, 1);
+  background-color: rgb(241, 215, 237);
   border: 0; 
-  color: #fff;
-  width: 200px;
+  color: #000;
+  width: 500px;
   height: 50px;
   margin: 20px;
   padding: 0 20px;
@@ -20,7 +25,7 @@ body{
   border-radius: 10px;
 }
 #to-do-form input::placeholder{
-  color: rgba(255,255,255,0.5);
+  color: rgba(49, 48, 48, 0.5);
 }
 #to-do-form input:focus{
   outline: none;
@@ -30,7 +35,7 @@ body{
   width: 80px;
   border-radius: 5px;
   border: 0;
-  background-color:rgba(202, 156, 24, 1); 
+  background-color:rgba(131, 199, 238, 0.897); 
   cursor: pointer;
 }
 #to-do-form button:focus{
